# silk_decoder

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/silk__example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: silk_decoder.podspec
ios/Classes/: silk_decoder.c
lib/: silk_decoder.dart  silk_decoder_bindings_generated.dart
linux/: CMakeLists.txt
macos/: silk_decoder.podspec
macos/Classes/: silk_decoder.c
src/: CMakeLists.txt  silk_decoder.c  silk_decoder.h
src/silk/: CMakeLists.txt
windows/: CMakeLists.txt
